# Challenge2026-practice

./: README.md  pyproject.toml
.github/workflows/: python-format.yml
docs/issues/: 01-improve-board-rendering.md  02-support-right-click-flag.md  03-implement-flood-fill.md  04-add-win-lose-state.md  05-randomize-mines-and-safe-first-click.md
docs/plans/: 2026-03-23-minesweeper-starter-project.md
minesweeper/: __init__.py  app.py  nothing.txt
minesweeper/game/: __init__.py  board.py  logic.py  state.py
minesweeper/ui/: board_view.py  widgets.py
minesweeper/utils/: __init__.py  helpers.py
