[project]
name = "minesweeper-starter"
version = "0.1.0"
description = "Starter Textual minesweeper project for Git collaboration practice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=6.1.0,<7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minesweeper"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
